GPC/tests/examples/fail/errArith.gpc


void errArith() {
    return 3 < 3.0;
}
